initial port to neoforge 1.21.1, most things work